# ccaudit

./: .gitignore  .prettierignore  .stylelintrc.json  Cargo.toml  Makefile  README.md  build.rs  deny.toml  eslint.config.mjs  package-lock.json  package.json
.github/: WORKFLOW_STANDARDS.md  apply-settings.sh  dependabot.yml  settings.json
.github/workflows/: ci.yml  release.yml  supply-chain.yml
Formula/: ccaudit.rb
benches/: bench-vs.sh  bench.rs
examples/: bench.rs
npm/ccaudit/: package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
pypi/: README.md
pypi/ccaudit/: MANIFEST.in  pyproject.toml  setup.py
pypi/ccaudit/src/ccaudit/: __init__.py  __main__.py
src/: cli.rs  lib.rs  main.rs  parse.rs  search.rs  serve.rs  style.rs  ui.rs  web.rs
src/cache/: agg.rs  build.rs  load.rs  mod.rs  schema.rs
src/report/: carbon.rs  fmt.rs  json.rs  mod.rs  statusline.rs  table.rs
src/source/: bulk_scan_darwin.rs  claude_code.rs  codex.rs  mod.rs  prices.rs
src/web/: app.js  run-tests.js  style.css  test.html  test.js  util.js
tests/: cli.rs  uniformity.rs
tests/common/: mod.rs
