[package]
name = "ccaudit"
version = "0.1.0"
edition = "2024"
description = "Fast Claude Code log viewer — CLI + TUI + web. Token usage, cost, and full conversation history."
license = "MIT"
readme = "README.md"
repository = "https://github.com/electricapp/ccaudit"
homepage = "https://github.com/electricapp/ccaudit"
documentation = "https://github.com/electricapp/ccaudit"
keywords = ["claude", "claude-code", "ccusage", "tokens", "cli"]
categories = ["command-line-utilities", "development-tools"]
# TODO: add authors once the repo has named maintainers.
authors = ["electricapp"]

[features]
default = ["full"]
# Full build: TUI browser + static web report + json dump + usage report
# + locale-aware date formatting.
full = ["tui", "web", "locale"]
# Interactive TUI (ratatui/crossterm/nucleo fuzzy search, unicode width).
tui = ["dep:ratatui", "dep:crossterm", "dep:nucleo-matcher", "dep:unicode-width"]
# Static web report + local server (no extra deps, but the feature gates
# ~60KB of generation+serve code).
web = []
# Locale-aware date formatting for --locale (chrono unstable-locales).
# Adds ~260KB of locale tables; skip for lean builds.
locale = ["chrono/unstable-locales"]

[dependencies]
# --- Always-on (used by --usage, the default command, and the JSONL parser) ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
memmap2 = "0.9"
memchr = "2"
bytemuck = { version = "1", features = ["derive"] }
rustc-hash = "2"
rayon = "1.12"
mimalloc = { version = "0.1", default-features = false }
itoa = "1"
ryu = "1"
# --- Optional (TUI only) ---
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", optional = true }
nucleo-matcher = { version = "0.3", optional = true }
unicode-width = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3"
serde_json = "1"

[lints.rust]
unsafe_code = "warn"
unused_results = "warn"
unused_qualifications = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "warn"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
option_if_let_else = "allow"
use_self = "allow"
too_many_lines = "allow"
if_not_else = "allow"
collapsible_if = "allow"
collapsible_else_if = "allow"
redundant_closure_for_method_calls = "allow"
unnested_or_patterns = "allow"
items_after_statements = "allow"
map_unwrap_or = "allow"
struct_field_names = "allow"
needless_raw_string_hashes = "allow"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = false
incremental = false
overflow-checks = false
