[package]
name = "ccaudit"
version = "0.1.0"
edition = "2024"
description = "Fast Claude Code log viewer — CLI + TUI + web. Token usage, cost, and full conversation history."
license = "MIT"
readme = "README.md"
repository = "https://github.com/electricapp/ccaudit"
homepage = "https://github.com/electricapp/ccaudit"
documentation = "https://github.com/electricapp/ccaudit"
keywords = ["claude", "claude-code", "ccusage", "tokens", "cli"]
categories = ["command-line-utilities", "development-tools"]
# TODO: add authors once the repo has named maintainers.
authors = ["electricapp"]

[features]
default = ["full"]
# Full build: TUI browser + static web report + json dump + usage report
# + locale-aware date formatting.
full = ["tui", "web", "locale"]
# Interactive TUI (ratatui/crossterm/nucleo fuzzy search, unicode width).
tui = ["dep:ratatui", "dep:crossterm", "dep:nucleo-matcher", "dep:unicode-width"]
# Static web report + local server (no extra deps, but the feature gates
# ~60KB of generation+serve code).
web = []
# Locale-aware date formatting for --locale (chrono unstable-locales).
# Adds ~260KB of locale tables; skip for lean builds.
locale = ["chrono/unstable-locales"]

[dependencies]
# --- Always-on (used by --usage, the default command, and the JSONL parser) ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
memmap2 = "0.9"
memchr = "2"
bytemuck = { version = "1", features = ["derive"] }
rustc-hash = "2"
rayon = "1.12"
mimalloc = { version = "0.1", default-features = false }
itoa = "1"
ryu = "1"
# --- Optional (TUI only) ---
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
nucleo-matcher = { version = "0.3", optional = true }
unicode-width = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3"
serde_json = "1"

[lints.rust]
unsafe_code = "warn"
unused_results = "warn"
unused_qualifications = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
# Cherry-picked restriction-group lints. The full `restriction` group is
# opinionated to the point of being contradictory, so enabling all of it
# is a footgun — instead we pick individual rules that catch real bugs:
#   print_stderr/print_stdout — flagged debug prints leaking to production
#   dbg_macro                 — leftover dbg!() from local debugging
#   todo/unimplemented        — stubs that shouldn't ship
#   mem_forget                — suspicious, almost never intentional
#   rc_buffer                 — wrong Rc<String>/Rc<Vec<T>> shape
#   unreachable               — panics dressed up as control flow
#   get_unwrap                — .get(i).unwrap() is just indexing
dbg_macro = "deny"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"
mem_forget = "deny"
rc_buffer = "deny"
get_unwrap = "deny"
# `clippy::cargo` catches things like wildcard deps + negative feature
# names. `multiple_crate_versions` is opted out because it fires on
# transitive dep graphs — we can't dedupe versions pulled in by indirect
# dependencies (e.g. ratatui + bincode bringing in two `syn` majors)
# without patching upstream.
multiple_crate_versions = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
option_if_let_else = "allow"
use_self = "allow"
too_many_lines = "allow"
if_not_else = "allow"
collapsible_if = "allow"
collapsible_else_if = "allow"
redundant_closure_for_method_calls = "allow"
unnested_or_patterns = "allow"
items_after_statements = "allow"
map_unwrap_or = "allow"
struct_field_names = "allow"
needless_raw_string_hashes = "allow"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
debug = false
incremental = false
overflow-checks = false
